# picoservice

./: LICENSE  README.md  package.json  pyproject.toml
picoservice/ble/: server.py  sockets.py
picoservice/core/: handler.py  router.py  sockets.py
picoservice/web/: http.py  server.py  sockets.py
